--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.0.1",
+    "resolve-lygia": "^1.0.4",
     "tailwindcss": "^3.4.16",
     "three": "^0.170.0",
     "zustand": "^5.0.2"
