--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@types/three": "^0.170.0",
     "autoprefixer": "^10.4.20",
     "framer-motion": "^11.14.4",
+    "framer-motion-3d": "^11.15.0",
+    "jotai": "^2.10.4",
     "leva": "^0.9.35",
     "postcss": "^8.4.49",
     "react": "^18.3.1",
